added link to recipe

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>
-            Odin Recipes
-        </h1>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/pumpkinpie.html">Pumpkin Pie</a>
     </body>
 </html>
