added the rest of recipe #1

--- a/recipes/pumpkinpie.html
+++ b/recipes/pumpkinpie.html
@@ -6,5 +6,30 @@
     </head>
     <body>
         <h1>Pumpkin Pie</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Pumpkin_pie_with_whipped_cream%2C_November_2009.jpg" alt="pumpkin pie on plate" width="200">
+        <h2>Description</h2>
+        <p>Pumpkin pie is a delicious dessert dish best served with a dollop of whipped cream on top and on any festive holiday of the winter season, especially thanksgiving! 
+            What's better than making your own pumpkin pie, completely fresh made and ready to serve hot to accompany your turkey and stuffing :)
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 9-inch homemade pie crust, or store-bought, deep dish, unbaked</li>
+            <li>3/4 cup granulated sugar</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/2 teaspoon ground ginger</li>
+            <li>1/4 teaspoon ground cloves</li>
+            <li>2 large eggs</li>
+            <li>15 ounce can canned pumpkin or fresh pumpkin puree</li>
+            <li>12 ounce can evaporated milk</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Make sure to preheat oven to 425 degrees F</li>
+            <li>In a large bowl beat eggs and pumpkin puree together. In a separate bowl, add the sugar, cinnamon, salt, ginger, and cloves, and mix. Then add to pumpkin mixture.</li>
+            <li>Gradually stir in the evaporated milk. Carefully pour mixture into unbaked pie shell. Make sure to tap the pie pan on countertop to remove air bubbles. </li>
+            <li>Bake at 425 degrees F for 15 minutes. Reduce temperature to 350 F; bake for 40 to 50 minutes longer, or until the pie is set. Check for doneness by giving the pie a gentle wiggle. The center may jiggle just a tiny bit. It will continue to set up as it cools.</li>
+            <li>Cool completely. Serve immediately with whipped cream. </li>
+        </ol>
     </body>
 </html>
