--- a/recipes/pumpkinpie.html
+++ b/recipes/pumpkinpie.html
@@ -9,7 +9,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Pumpkin_pie_with_whipped_cream%2C_November_2009.jpg" alt="pumpkin pie on plate" width="200">
         <h2>Description</h2>
         <p>Pumpkin pie is a delicious dessert dish best served with a dollop of whipped cream on top and on any festive holiday of the winter season, especially thanksgiving! 
-            What's better than making your own pumpkin pie, completely fresh made and ready to serve hot to accompany your turkey and stuffing :)
+            What's better than making your own pumpkin pie, completely fresh made and ready to serve hot to accompany your turkey and stuffing :). <a href="https://tastesbetterfromscratch.com/pumpkin-pie-with-caramel-pecan-topping/">Recipe from here.</a>
         </p>
         <h3>Ingredients</h3>
         <ul>
