--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pumpkinpie.html">Pumpkin Pie</a>
+        <ul>
+            <li><a href="recipes/pumpkinpie.html">Pumpkin Pie</a></li>
+            <li><a href="recipes/macandcheese.html">Mac and Cheese</a></li>
+            <li><a href="recipes/eggsbenedict.html">Eggs Benedict</a></li>
+        </ul>
     </body>
 </html>
