--- a/recipes/eggsbenedict.html
+++ b/recipes/eggsbenedict.html
@@ -8,14 +8,42 @@
         <h1>Eggs Benedict with Hollandaise Sauce</h1>
         <img src="https://img.ccnull.de/1095000/preview/1098765_538e4e4a703bd724ae25b45cc759bc5d.jpg" alt="eggs benedict with hollandaise sauce" width="400">
         <h2>Description</h2>
-        <p><a href="https://tastesbetterfromscratch.com/eggs-benedict-with-homemade-hollandaise-sauce/">Recipe from here.</a></p>
+        <p>
+            <a href="https://tastesbetterfromscratch.com/eggs-benedict-with-homemade-hollandaise-sauce/">Recipe from here.</a>
+        </p>
         <h3>Ingredients</h3>
         <ul>
-            <li>ingredient</li>
+            <li>2 English Muffins</li>
+            <li>4 large eggs</li>
+            <li>4 slices Canadian bacon</li>
+            <li>Vinegar</li>
+        </ul>
+        <h4>For the Hollandaise sauce:</h4>
+        <ul>
+            <li>4 Tablespoons butter</li>
+            <li>4 eggs yolks</li>
+            <li>2 teaspoons lemon juice, or lime juice</li>
+            <li>1 Tablespoon heavy whipping cream</li>
+            <li>salt and pepper (to taste)</li>
         </ul>
         <h3>Steps</h3>
+        <h4>For the Hollandaise sauce:</h4>
         <ol>
-            <li>step</li>
+            <li>Melt butter in a small saucepan. In a separate small bowl, beat the egg yolks. Mix in lemon juice, whipping cream, and salt and pepper</li>
+            <li>Add a small spoon full of the melted butter to the egg mixture and stir well. Repeat this process, adding each spoonful slowly as to not curdle the eggs. </li>
+            <li>Once the butter has been incorporated, pour mixture back into the saucepan. Cook on low heat, stirring constantly, for 20-30 seconds. Remove from heat and set aside. It will thickin as it cools. Stir well and add another splash of cream, if needed, to thin.</li>
+        </ol>
+        <h4>To poach the eggs:</h4>
+        <ol>
+            <li>Fill a medium size pot with about 3 inches of water. Bring the water to a boil and then reduce heat until it reaches a simmer.</li>
+            <li>Add a little splash of vinegar to the water. (Optional. Helps egg white to stay together in the water)</li>
+            <li>Crack one egg into a small cup. Lower the egg into the simmer water, gently easing it out of the cup.</li>
+            <li>Cook the egg in the simmering water for 3-5 minutes, depending on how soft you want your egg yolk. Remove the pached egg with a slotted spoon. </li>
+            <li>While the egg is cooking, place the slices of Canadian bacon in a large pan and cook on medium-high heat for about 1 minute on each side.</li>
+        </ol>
+        <h4>To assemble:</h4>
+        <ol>
+            <li>Toast the English muffin. Top each toasted side with a slice or two of the Canadian bacon, and then a poached egg. Top with hollandaise sauce. </li>
         </ol>
     </body>
 </html>
