--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -5,7 +5,7 @@
         <title>Homemade Mac and Cheese</title>
     </head>
     <body>
-        <h1>Homemade Mac and Cheese</h1>
+        <h1>Homemade Baked Mac and Cheese</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Baked_macaroni_and_cheese_1.jpg" alt="baked macaroni and cheese" width="400">
         <h2>Description</h2>
         <p>
@@ -13,11 +13,27 @@
         </p>
         <h3>Ingredients</h3>
         <ul>
-            <li>ingredient</li>
+            <li>1 lb. dried elbow pasta</li>
+            <li>1/2  cup unsalted butter</li>
+            <li>1/2 cup all purpose flour</li>
+            <li>1 1/2 cups whole milk</li>
+            <li>2 1/2 cups of half and half</li>
+            <li>4 cups shredded medium cheddar cheese <em>divided (measured after shredding)</em></li>
+            <li>2 cups shredded Gruyere cheese <em>divided (measured after shredding)</em></li>
+            <li>1/2 Tbsp. salt</li>
+            <li>1/2 tsp. black pepper</li>
+            <li>1/4 tsp. smoked paprika</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>step</li>
+            <li>Preheat oven to 325 degrees F and grease a 3 qt baking dish (9x13"). Set aside.</li>
+            <li>Bring a large pot of salted water to a boil. Once boiling, add dried past and cook 1 minute less than package directs for al dente. Drain and drizzle with a little bit of olive olil to keep from sticking.</li>
+            <li>While water is coming up to a boil, shred cheeses and toss together to mix, then divide in 3 piles. Approximately 3 cups for sauce, 1 1/2 cups for inner layer, and 1 1/2 cups for topping. </li>
+            <li>Melt butter in a large saucepan over medium heat. Sprinkle in flour and whisk to combine. Mixture will look like very wet sand. Cook for approximately 1 minute, whisking often. Slowly pour in about 2 cups or so of the half and half, while whisking constantly, until smooth. Slowly pour in the remaining half and half plus the whole milk, while whisking constantly, until combined and smooth. </li>
+            <li>Continue to heat over medium heat, whisking very often, until thickened to a very thick consistency.</li>
+            <li>Remove from heat and stir in spices and 1 1/2 cups of the cheeses, stirring to melt and comvine. Stir in another 1 1/2 cups of cheese, and stir until completely melted and smooth. </li>
+            <li>In a large mixing bowl, combine drained paste with cheese sauce, stirring to combine fully. Pour half the pasta mixture into the prepared baking dish. Top with 1 1/2 cup of shredded cheeses, then tip that with the remaining pasta mixture.</li>
+            <li>Sprinkle the top with the last 1 1/2 cups of cheese and bake for 15 minutes, until cheesy is bubbly and lightly golden brown. </li>
         </ol>
     </body>
 </html>
